--- a/index.html
+++ b/index.html
@@ -92,17 +92,26 @@
 
 <div class="four">
 
-    <p>Call to action! It's time!</p>
+    <div class="popup">
 
-    <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="popup-left">
 
-    <button>Sign up</button>
+            <div class="call">Call to action! It's time!</div>
 
+            <div>Sign up for our product by clicking that button right over there!</div>
+
+        </div>
+
+        <div class=buttonfour>
+            <button>Sign up</button>
+        </div>
+
+    </div>
 </div>
 
 <div class="footer">
 
-    <p>Copyright C The Odin Project 2021</p>
+    <p>Copyright © The Odin Project 2021</p>
 
 </div>
 
